<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="todo">Todo</string>
    <string name="escuelas">Escuelas</string>
    <string name="otros">Otros</string>

    <string name="Barcelona">Barcelona</string>
    <string name="Girona">Girona</string>
    <string name="Lleida">Lleida</string>
    <string name="Tarragona">Tarragona</string>

    <string name="infantil">Infantil</string>
    <string name="primaria">Primaria</string>
    <string name="eso">ESO</string>
    <string name="bachillerato">Bachillerato</string>
    <string name="fp">Formacion profecional</string>
    <string name="universidad">Universidad</string>
    <string name="descripcion">Descripcion</string>
    <string name="login_name">Username or Email</string>
    <string name="login_pass">Password</string>
    <string name="login">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="error_login">Error in login</string>
    <string name="register_admin">Register a new admin</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="repeat_password">Confirm password</string>
    <string name="not_valid_username">Not valid username</string>
    <string name="not_valid_name">Not a valid name</string>
    <string name="not_valid_surname">Not a valid surname</string>
    <string name="not_valid_password">Not valid password</string>
    <string name="password_mismatch">Password and confirmation not the same</string>
    <string name="errorCreatingUser">Username already exists</string>

    <string-array name="ciudades">
        <item>@string/Barcelona</item>
        <item>@string/Girona</item>
        <item>@string/Lleida</item>
        <item>@string/Tarragona</item>
    </string-array>
</resources>
