<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/main_activity_list_view_item_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/main_activity_list_view_item_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_list_view_item_name" />

    <ImageView
        android:id="@+id/main_activity_list_view_item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/main_activity_list_view_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_activity_list_view_item_infantil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_purple"
        android:text="@string/infantil"
        android:textSize="8sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_list_view_item_location" />

    <TextView
        android:id="@+id/main_activity_list_view_item_primaria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/primaria"
        android:textSize="8sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/main_activity_list_view_item_infantil"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_list_view_item_location" />

    <TextView
        android:id="@+id/main_activity_list_view_item_eso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/eso"
        android:textSize="8sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/main_activity_list_view_item_primaria"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_list_view_item_location" />

    <TextView
        android:id="@+id/main_activity_list_view_item_bachillerato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/bachillerato"
        android:textSize="8sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/main_activity_list_view_item_eso"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_list_view_item_location" />

    <TextView
        android:id="@+id/main_activity_list_view_item_fp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/fp"
        android:textSize="8sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/main_activity_list_view_item_bachillerato"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_list_view_item_location" />

    <TextView
        android:id="@+id/main_activity_list_view_item_universidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/universidad"
        android:textSize="8sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/main_activity_list_view_item_fp"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_list_view_item_location" />

</android.support.constraint.ConstraintLayout>