<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.grupo.proyectofinal.Activities.DetallesActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_detalles_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageView
        android:id="@+id/activity_detalles_Image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        app:srcCompat="@mipmap/ic_launcher" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_detalles_FAB"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="end|center_vertical"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@android:color/holo_blue_dark"
        app:srcCompat="@drawable/ic_map_icon" />
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical">

            <TextView
                android:id="@+id/activity_detalles_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/activity_detalles_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/activity_detalles_infantil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/holo_purple"
                    android:text="@string/infantil"
                    android:textSize="8sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/main_activity_list_view_item_location" />

                <TextView
                    android:id="@+id/activity_detalles_primaria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/holo_orange_light"
                    android:text="@string/primaria"
                    android:textSize="8sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@id/main_activity_list_view_item_infantil"
                    app:layout_constraintTop_toBottomOf="@+id/main_activity_list_view_item_location" />

                <TextView
                    android:id="@+id/activity_detalles_eso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/holo_orange_dark"
                    android:text="@string/eso"
                    android:textSize="8sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@id/main_activity_list_view_item_primaria"
                    app:layout_constraintTop_toBottomOf="@+id/main_activity_list_view_item_location" />

                <TextView
                    android:id="@+id/activity_detalles_bachillerato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/holo_red_dark"
                    android:text="@string/bachillerato"
                    android:textSize="8sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@id/main_activity_list_view_item_eso"
                    app:layout_constraintTop_toBottomOf="@+id/main_activity_list_view_item_location" />

                <TextView
                    android:id="@+id/activity_detalles_fp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/holo_green_light"
                    android:text="@string/fp"
                    android:textSize="8sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@id/main_activity_list_view_item_bachillerato"
                    app:layout_constraintTop_toBottomOf="@+id/main_activity_list_view_item_location" />

                <TextView
                    android:id="@+id/activity_detalles_universidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/holo_blue_light"
                    android:text="@string/universidad"
                    android:textSize="8sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@id/main_activity_list_view_item_fp"
                    app:layout_constraintTop_toBottomOf="@+id/main_activity_list_view_item_location" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion" />

            <TextView
                android:id="@+id/activity_detalles_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
